mType/tests/testFiles/collections/pass/forEachArray.mt
// For-each loop with arrays

// Create an array
Array<int> numbers = [10, 20, 30, 40, 50];

// Iterate using for-each loop
print("Using for-each:");
for (int num : numbers) {
    print(num);
}

// Test for-each with string array
Array<string> fruits = ["apple", "banana", "cherry"];
print("Fruits:");
for (string fruit : fruits) {
    print(fruit);
}

print("For-each array test passed");